Testing dns templates.

--- a/playbooks/bind9.yaml
+++ b/playbooks/bind9.yaml
@@ -6,10 +6,10 @@
       apt:
         name: bind9
         update_cache: yes
-    - name: config zone example.com
-      vars:
-        domain: "example.com"
-        nodes: "{{groups['all']}}"
-      template:
-        src: file/var/cache/bind/db.example.com
-        dest: /var/cache/bind/db.{{domain}}
+    # - name: config zone example.com
+    #   vars:
+    #     domain: "example.com"
+    #     nodes: "{{groups['all']}}"
+    #   template:
+    #     src: file/var/cache/bind/db.example.com
+    #     dest: /var/cache/bind/db.{{domain}}
