--- a/playbooks/php-fpm.yaml
+++ b/playbooks/php-fpm.yaml
@@ -5,4 +5,15 @@
     - name: install php-fpm if needed
       apt:
         name: php7.0-fpm
-        
+      notify:
+        - restart nginx
+
+    - name: install PhP MySQL library
+      apt:
+        name: php7.0-mysql
+
+  handlers:
+    - name: restart php-fpm
+      service:
+        name: php7.0-fpm
+        state: restarted
