--- a/playbooks/node2.yaml
+++ b/playbooks/node2.yaml
@@ -1,3 +1,5 @@
-- import_playbook: nginx.yaml
-- import_playbook: php-fpm.yaml
-- import_playbook: commons.yaml
+---
+- hosts: node2
+  roles:
+    - webserver
+    - wordpress
