--- a/playbooks/node1.yaml
+++ b/playbooks/node1.yaml
@@ -1,9 +1,6 @@
-# - import_playbook: roles/mysql/tasks/main.yaml
-# - import_playbook: roles/mysql/tasks/main.yaml
-# # - import_playbook: roles/commons.yaml
 ---
 - hosts: node1
   roles:
     - bind9
     - mysql
-    - wordpress
+    - wordpressdb
