--- a/playbooks/playbooks.yml
+++ b/playbooks/playbooks.yml
@@ -2,10 +2,10 @@
 - hosts: node1
   roles:
     - bind9
-    - mysql
-    - wordpressdb
+      #    - mysql
+      #- wordpressdb
 
-- hosts: node2
-  roles:
-    - webserver
-    - wordpressfiles
+      #- hosts: node2
+      #  roles:
+      #    - webserver
+      #    - wordpressfiles
