--- a/playbooks/roles/bind9/tasks/main.yaml
+++ b/playbooks/roles/bind9/tasks/main.yaml
@@ -1,5 +1,5 @@
 ---
-# - hosts: node1
+# - hosts: 34.243.56.110
 # - become: yes
 # - vars_files:
 #     - main.yml
@@ -26,6 +26,6 @@
 - name: Configuring inverse zone {{domain}}
   template:
     src: 'templates/var/cache/bind/db.10.10.5'
-    dest: "/var/cache/bind/db.{{ hostvars['node1']['ansible_ssh_host'].split('.')[0] }}.{{ hostvars['node1']['ansible_ssh_host'].split('.')[1] }}.{{ hostvars['node1']['ansible_ssh_host'].split('.')[2] }}"
+    dest: "/var/cache/bind/db.{{ hostvars['34.243.56.110']['ansible_ssh_host'].split('.')[0] }}.{{ hostvars['34.243.56.110']['ansible_ssh_host'].split('.')[1] }}.{{ hostvars['34.243.56.110']['ansible_ssh_host'].split('.')[2] }}"
   notify:
     - restart bind9
