--- a/playbooks/roles/ec2/tasks/main.yaml
+++ b/playbooks/roles/ec2/tasks/main.yaml
@@ -1,3 +1,7 @@
 ---
 - name: Get EC2 instance information
   ec2_metadata_facts:
+- debug:
+        msg: "IAM: {{ansible_ec2_iam_security_credentials__accesskeyid}}"
+- debug:  
+        msg: "Local IPv4: {{ansible_ec2_local_ipv4}}"
